<resources>
    <string name="app_name">Money Manager</string>
    <string name="app_icon">Money Manager icon</string>
    <string name="nav_header_title">Money Manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author">Chester Lloyd</string>
    <string name="author_email">apps@chester-lloyd.dev</string>
    <string name="github_url">https://github.com/ChesterLloyd/</string>
    <string name="project_url">https://chester-lloyd.dev/</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_recurring_transactions">Recurring Transactions</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_monthly_summary">Monthly Summary</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Money Manager</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="balance_text">£%1$.2f</string>
    <string name="current_balance">Current balance</string>
    <string name="details">Details</string>
    <string name="appearance">Appearance</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="manage_account">Manage account</string>
    <string name="manage_category">Manage category</string>
    <string name="account">Account</string>
    <string name="no_accounts">You do not have any accounts, set one up using the button below\n\nAn account is required to save transactions as these will be used as the payment method. You could choose to make one for a "current account" or "cash"</string>
    <string name="text_account_desc">Add a virtual account to represent an account you\'d like to track your expenses for.</string>
    <string name="text_edit_account_desc">Edit this account.</string>
    <string name="button_add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="fab_add_account">Add or update an account</string>
    <string name="account_icon">Account icon</string>
    <string-array name="account_names">
        <item>Bank</item>
        <item>Business</item>
        <item>Cash</item>
        <item>Credit card</item>
        <item>Dollar</item>
        <item>Gift card</item>
        <item>Joint account</item>
        <item>Membership</item>
        <item>PayPal</item>
        <item>Travel card</item>
        <item>Wallet</item>
    </string-array>
    <string name="account_colour">Account colour</string>
    <string-array name="colour_names">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Indigo</item>
        <item>Violet</item>
        <item>Blue Grey</item>
        <item>PayPal</item>
    </string-array>
    <string name="account_set_default">Set as default account</string>
    <string name="account_validation_name">Account name cannot be blank</string>
    <string name="account_validation_balance">Account balance cannot be blank</string>
    <string name="account_validation_balance_invalid">Account balance is invalid</string>
    <string name="transfer">Transfer</string>
    <string name="fab_transfer_funds">Save or update this transfer of funds transaction</string>
    <string name="transfer_funds">Transfer funds</string>
    <string name="text_transfer_desc">Transfer any amount from one of your accounts to another.</string>
    <string name="transfer_source_account">Source account</string>
    <string name="transfer_destination_account">Destination account</string>
    <string name="transfer_to">%1$s to %2$s</string>
    <string name="transfer_from_to">Transfer from %1$s to %2$s</string>
    <string name="transfer_same_accounts">Source and destination accounts must be different</string>
    <string name="transfer_min_accounts">You must have at least 2 accounts to make a transfer</string>
    <string name="category_validation_name">Category name cannot be blank</string>
    <string name="transaction_validation_name">Transaction name cannot be blank</string>
    <string name="transaction_validation_amount">Transaction amount cannot be blank</string>
    <string name="transaction_validation_amount_invalid">Transaction amount is invalid</string>
    <string name="transaction_validation_amount_zero">Transaction amount cannot be 0</string>
    <string name="transaction_validation_date">Transaction date cannot be blank</string>
    <string name="transaction_validation_payments">Account payments do not make up the transaction amount</string>
    <string name="transaction_validation_duplicate_payment_methods">Duplicate payment methods have been used</string>
    <string name="transaction_recurring_validation_name">Please enter a name</string>
    <string name="transaction_recurring_validation_unit">Frequency must be at least 1</string>
    <string name="transaction_recurring_validation_period">Please select a frequency period</string>
    <string name="transaction_recurring_validation_end_before">Recurring end date must be after the transaction date</string>
    <string name="transaction_recurring_validation_multiple_accounts">Recurring transactions can only involve 1 payment account</string>
    <string name="transaction_recurring_insert_success">Transaction set to recur every %1$s</string>
    <string name="transaction_recurring_every">Every %1$s</string>
    <string name="no_recurring_transactions">You do not have any recurring transactions. Set one up by adding or modifying a transaction then toggling the "recurring transaction" slider.</string>
    <string name="manage_recurring_transaction">Manage recurring transaction</string>
    <string name="frequency">Frequency</string>
    <string name="unit">Unit</string>
    <string name="frequency_repeats_every">Repeats every %1$s</string>
    <string name="next_due">Next due</string>
    <string name="until">Until</string>
    <string name="indefinitely">Indefinitely</string>
    <string name="text_recurring_transaction_desc">Update the frequency settings for this recurring transaction.\n\nThe next transaction date will be based on the date of the previous transaction.</string>
    <string name="alert_title_recurring_transaction_update_category">Update previous transactions</string>
    <string name="alert_message_recurring_transaction_update_category">Would you like to update the category for all previous transactions? If not, this category will only apply to new transactions.</string>
    <string name="fab_edit_recurring_transaction">Update recurring transaction</string>
    <string name="account_insert_success">Account saved</string>
    <string name="account_insert_fail">Could not save this account</string>
    <string name="account_update_success">Account updated</string>
    <string name="account_update_fail">Could not update this account</string>
    <string name="category_insert_success">Category saved</string>
    <string name="category_insert_fail">Could not save this category</string>
    <string name="category_update_success">Category updated</string>
    <string name="category_update_fail">Could not update this category</string>
    <string name="transaction_insert_success">Transaction saved</string>
    <string name="transaction_insert_fail">Could not save this transaction</string>
    <string name="transaction_update_success">Transaction updated</string>
    <string name="transaction_update_fail">Could not update this transaction</string>
    <string name="recurring_transaction_update_success">Recurring transaction updated</string>
    <string name="recurring_transaction_update_fail">Could not update this recurring transaction</string>
    <string name="icon_colour">Colour icon</string>
    <string name="icon_account">Account icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_cancel">No, cancel</string>
    <string name="alert_title_delete_account">Delete account</string>
    <string name="alert_message_delete_account">Are you sure that you want to delete this account
        and all associated transactions?\n\nNote: any transactions paid by multiple accounts will
        remain until all associated accounts are deleted</string>
    <string name="alert_message_delete_account_contains_recurring_transactions">Are you sure that you want to delete this account
        and all associated transactions?\n\nNote: any transactions paid by multiple accounts will
        remain until all associated accounts are deleted\n\nThis account contains recurring transactions, these will also be deleted
    </string>
    <string name="alert_title_delete_category">Delete category</string>
    <string name="alert_message_delete_category">Are you sure that you want to delete this category
        and all associated transactions?</string>
    <string name="alert_title_delete_transaction">Delete transaction</string>
    <string name="alert_message_delete_transaction">Are you sure that you want to delete this transaction?</string>
    <string name="alert_title_delete_recurring_transaction">Delete recurring transaction</string>
    <string name="alert_message_delete_recurring_transaction">Are you sure that you want to delete this recurring transaction and all related transactions?</string>
    <string name="no_categories">You do not have any categories, set one up using the button below\n\nA category is required to save transactions as these will be used to categorise them. You could choose to make one for "rent" or "food"</string>
    <string name="text_category_desc">Add a category that will classify one or more transactions.</string>
    <string name="text_edit_category_desc">Edit this category.</string>
    <string name="button_add_category">Add category</string>
    <string name="edit_category">Edit category</string>
    <string name="fab_add_category">Add or update a category</string>
    <string name="category_icon">Category icon</string>
    <string name="add_transaction_no_account">You do not have any accounts. To add a transaction, you must first have at least one account.</string>
    <string name="add_transaction_no_category">You do not have any categories. To add a transaction, you must first have at least one category.</string>
    <string name="add_transaction_requirements_met">You can now start adding transactions!</string>
    <string name="button_add_transaction">Add transaction</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_date">Date</string>
    <string name="settings_currency">Currency settings</string>
    <string name="settings_currency_button">Change format</string>
    <string name="settings_date">Date settings</string>
    <string name="settings_update_date_format">Update date format</string>
    <string name="settings_security">Security settings</string>
    <string name="settings_set_pin_button">Set a new PIN</string>
    <string name="settings_remove_pin_button">Remove PIN</string>
    <string name="settings_database">Database settings</string>
    <string name="settings_export_database_button">Export database</string>
    <string name="settings_import_database_button">Import database</string>
    <string name="about_profile_image">Profile photo of the author</string>
    <string name="about_author">Developer from the UK doing side projects such as web and Android apps. I am a Computer Science graduate from the University of Newcastle.</string>
    <string name="email_icon">Send me an email</string>
    <string name="website_icon">Go to my website</string>
    <string name="github_icon">Visit my GitHub</string>
</resources>