<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dev.chester_lloyd.moneymanager.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="dev.chester_lloyd.moneymanager.ui.accounts.AccountsFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="dev.chester_lloyd.moneymanager.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_recurring_transactions"
        android:name="dev.chester_lloyd.moneymanager.ui.recurring_transactions.RecurringTransactionsFragment"
        android:label="@string/menu_recurring_transactions"
        tools:layout="@layout/fragment_recurring_transactions" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="dev.chester_lloyd.moneymanager.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_monthly_summary"
        android:name="dev.chester_lloyd.moneymanager.ui.monthlySummary.MonthlySummaryFragment"
        android:label="@string/menu_monthly_summary"
        tools:layout="@layout/fragment_monthly_summary" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="dev.chester_lloyd.moneymanager.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>