<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.About">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/about_profile_image" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/author"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/tvAboutAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:text="@string/about_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <LinearLayout
        android:id="@+id/llSocial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutAuthor">

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:baselineAlignBottom="false"
            android:clickable="true"
            android:contentDescription="@string/email_icon"
            android:focusable="true"
            app:srcCompat="@drawable/ic_email" />

        <ImageView
            android:id="@+id/ivWebsite"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:clickable="true"
            android:contentDescription="@string/website_icon"
            android:focusable="true"
            app:srcCompat="@drawable/ic_globe" />

        <ImageView
            android:id="@+id/ivGithub"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:clickable="true"
            android:contentDescription="@string/github_icon"
            android:focusable="true"
            android:src="@drawable/ic_github_mark" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSocial"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>